examples/test/testpolicy12508.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12508
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key25: value21
      key26: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value16
          key23: value15
          key7: value23
      podSelector:
        matchLabels:
          key48: value41
          key40: value30
          key0: value0
